--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   color: #191970
 }
   
-  .kartu-profil {
+  .kartu-profile {
   width: 300px;
   margin: 50px auto;
   padding: 20px;
@@ -14,7 +14,7 @@ body {
        text-align: center;
 }
 
-.kartu-profil img {
+.kartu-profile img {
   width: 150px;
   border-raadius: 55%;
 }
