--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   background-color: #FFC0CB;
   font-family: Arial, sans-serif;
-  color: #191970
+  color: #191970;
 }
+
 .kartu-profile {
   width: 300px;
   margin: 50px auto;
   padding: 20px;
   background-color: white;
-  border-radius:15px;
-  box-shadow: 0 4px 8px rgba (0,0,0,0.1);
-  text-align: center;}
-
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
 
 .kartu-profile img {
   width: 150px;
-  border-raadius: 55%;}
+  border-radius: 55%;
+}
+
